--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="store.js"></script>
 
 
+    <script src="controllers/lot.js"></script>
     <script src="controllers/new-lot.js"></script>
     <script src="controllers/product.js"></script>
     <script src="controllers/new-product.js"></script>
