Add ability to render add product form and product template on lot page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>All your junk</title>
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/bootstrap-paper.css">
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -24,6 +25,7 @@
 
     <script src="routes/lots.js"></script>
     <script src="routes/lot.js"></script>
+    <script src="routes/product.js"></script>
     <script src="routes/new-product.js"></script>
 
     <script src="models/lot.js"></script>
@@ -33,7 +35,7 @@
 
 
     <script>
-      EmberHandlebarsLoader.loadTemplates(['application', 'lots', 'new-lot', 'lot', 'new-product']);
+      EmberHandlebarsLoader.loadTemplates(['application', 'lots', 'new-lot', 'lot', 'new-product','product']);
     </script>
 
   </head>
